# claw-sync

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  deny.toml
.github/workflows/: ci.yml  publish.yml
claw-core/: Cargo.toml
claw-core/src/: lib.rs
claw-sync/: Cargo.toml  README.md  build.rs
claw-sync-server/: Cargo.toml  README.md
claw-sync-server/src/: main.rs
claw-sync/benches/: sync_bench.rs
claw-sync/migrations/: 0001_queue.sql  0002_queue_dedupe.sql  0003_offline_queue_chunks.sql
claw-sync/proto/: sync.proto
claw-sync/src/: config.rs  engine.rs  error.rs  lib.rs  main.rs
claw-sync/src/audit/: log.rs  mod.rs  verifier.rs
claw-sync/src/crdt/: clock.rs  lww.rs  mod.rs  ops.rs  resolver.rs
claw-sync/src/crypto/: cipher.rs  keys.rs  mod.rs  signing.rs  transport.rs
claw-sync/src/delta/: extractor.rs  hasher.rs  mod.rs  packer.rs  unpacker.rs
claw-sync/src/identity/: device.rs  mod.rs  workspace.rs
claw-sync/src/queue/: drain.rs  mod.rs  offline.rs  scheduler.rs
claw-sync/src/sync/: apply.rs  checkpoint.rs  mod.rs  pull.rs  push.rs  reconcile.rs
claw-sync/src/transport/: client.rs  mod.rs  reconnect.rs  stream.rs
claw-sync/tests/: integration.rs
docs/: SECURITY.md
