[package]
name = "claw-sync-server"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "Standalone sync hub binary for claw-sync"
authors = ["Tomiwa Adeyemi <adeyemitomiwa7@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/claw-db/claw-sync/claw-sync-server"
homepage = "https://github.com/claw-db/claw-sync/claw-sync-server"
readme = "README.md"
keywords = ["clawdb", "claw", "sync", "database", "server"]
categories = ["database", "network-programming"]



[[bin]]
name = "claw-sync-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
base64 = "0.22"
claw-sync = { version = "0.1.2", path = "../claw-sync" }
