[package]
name = "claw-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Local-to-cloud synchronisation engine for ClawDB"
license = "MIT"
authors = ["Tomasz Kowal <tomasz.kowal@clawdb.com>"]
homepage = "https://github.com/clawdb/claw-sync"
repository = "https://github.com/clawdb/claw-sync"
keywords = ["clawdb", "claw", "sync", "database", "storage"]
categories = ["database", "synchronization", "network-programming"]

[[bin]]
name = "claw-sync"
path = "src/main.rs"

[lib]
name = "claw_sync"
path = "src/lib.rs"

[dependencies]
claw-core = "0.1.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport", "tls-roots"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
sodiumoxide = "0.2"
blake3 = "1.5"
base64 = "0.22"
lz4_flex = "0.11"
async-trait = "0.1"
tokio-stream = "0.1"
futures = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
dashmap = "6"
arc-swap = "1"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
rstest = "0.21"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "sync_bench"
harness = false
